--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Google Fonts -->
+    <!-- Roboto, Roboto Mono -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Balance Checker</title>
   </head>
   <body>
